# 2D-object-tracking

./: CMakeLists.txt  README.md
src/: MidTermProject_Camera_Student.cpp
